--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.java.cricbuzz</groupId>
-	<artifactId>spring-boot-Cricbuzz</artifactId>
+	<groupId>com.example</groupId>
+	<artifactId>demomongodb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo-1</name>
+	<name>demomongodb</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -31,27 +31,32 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-integration</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web-services</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<scope>runtime</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Tomcat Embed -->
+              <dependency>
+                     <groupId>org.springframework.boot</groupId>
+                     <artifactId>spring-boot-starter-tomcat</artifactId>
+                     <scope>provided</scope>
+              </dependency>
+              <!-- JSTL -->
+              <dependency>
+                     <groupId>javax.servlet</groupId>
+                     <artifactId>jstl</artifactId>
+              </dependency>
+              <!-- To compile JSP files -->
+              <dependency>
+                     <groupId>org.apache.tomcat.embed</groupId>
+                     <artifactId>tomcat-embed-jasper</artifactId>
+                     <scope>provided</scope>
+              </dependency>
+		
 	</dependencies>
 
 	<build>
